--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -4,10 +4,18 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 10rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+}
+
+.logo {
+  display: block;
+  margin: 1em auto;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
 }
 
 @media screen and (max-width: 996px) {
