--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -12,7 +12,7 @@
 
 .logo {
   display: block;
-  margin: 1em auto;
+  margin: 2em auto 2em;
   width: 120px;
   height: 120px;
   border-radius: 50%;
